# rambam

./: .gitignore  README.md  index.html  package-lock.json  package.json  release.sh  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  store.tsx  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Button.tsx  CopySummaryButton.tsx  EventsPanel.tsx  MetricsPanel.tsx  Sidebar.tsx  Spinner.tsx
src/hooks/: useInitApp.ts
src/lib/: ai-summary.ts  charts.ts  fetch.ts  tauri.ts
src/lib/openwearables/: api.ts  config.ts  types.ts
src/views/: Dashboard.tsx  Settings.tsx
