[package]
name = "rambam"
version = "0.1.0"
description = "rambam health data dashboard"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
